test/cherry/Language/tensor_function_param_lowering_error.cherry
# RUN: not cherry-driver -dump=mlir %s 2>&1 | FileCheck %s

fn consume(values: Float32[?, ?]): UInt64 {
  0
}

fn main(): UInt64 {
  0
}

# CHECK: error: Tensor function parameters require function memref ABI
